# -Tech4Biz-Determ8

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: loan_agent.py
src/determ8/: __init__.py
src/determ8/core/: __init__.py  gate.py  logger.py  pipeline.py  verdict.py
src/determ8/gates/: __init__.py  fsm_gate.py  graph_gate.py  idempotency_gate.py  schema_gate.py
tests/: test_gates.py  test_pipeline.py
