[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "determ8"
version = "0.1.0"
description = "The deterministic gate for agentic systems. The agent proposes, the pipeline proves."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tech4Biz", email = "contact@tech4biz.io" }]
keywords = ["ai", "agents", "deterministic", "verification", "guardrails", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
schema = ["jsonschema>=4.0"]
dev = ["pytest>=7.0", "jsonschema>=4.0"]
all = ["jsonschema>=4.0"]

[project.urls]
Homepage = "https://github.com/tech4biz/determ8"
"Get the full engine" = "mailto:contact@tech4biz.io"

[tool.hatch.build.targets.wheel]
packages = ["src/determ8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
